--- a/config/database.yml
+++ b/config/database.yml
@@ -19,9 +19,9 @@ development:
   encoding: utf8
   reconnect: false
   database: SW_development
-  pool: 5
+  pool: 50
   username: root
-  password:
+  password: asdf
   socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -32,9 +32,9 @@ test:
   encoding: utf8
   reconnect: false
   database: SW_test
-  pool: 5
+  pool: 50
   username: root
-  password:
+  password: asdf
   socket: /tmp/mysql.sock
 
 production:
@@ -42,7 +42,7 @@ production:
   encoding: utf8
   reconnect: false
   database: SW_production
-  pool: 5
+  pool: 50
   username: root
-  password: 
+  password: asdf
   socket: /tmp/mysql.sock
